ganti warna teks & background

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sraww - CSS</title>
+
+    <style>
+        body {
+            color: rgb(143, 66, 66);
+            background-color: rgb(114, 114, 190);
+        }
+    </style>
 </head>
 <body>
     <h1>Selamat Datang di webku untuk belajar HTML & CSS</h1>
