--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
     </style>
 </head>
 <body>
-    <h1>Selamat Datang di webku untuk belajar HTML & CSS</h1>
-    <h2>good morning</h2>
+    <header>
+        <h1>Header</h1>
+    </header>
+
+    <div class="container">
+        <nav>
+            <h2>Navigation</h2>
+            <ul>
+                <li>Link 1</li>
+                <li>Link 2</li>
+                <li>Link 3</li>
+            </ul>
+        </nav>
+
+        <main class="articles">
+            <article>
+                <h2>Article 1</h2>
+                <p>Konten artikel pertama...</p>
+            </article>
+            <article>
+                <h2>Article 2</h2>
+                <p>Konten artikel kedua...</p>
+            </article>
+            <article>
+                <h2>Article 3</h2>
+                <p>Konten artikel ketiga...</p>
+            </article>
+        </main>
+    </div>
+
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
 </html>
