--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 
     <style>
         body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+    </style>
+
+    <style>
+        body {
             color: rgb(143, 66, 66);
             background-color: rgb(114, 114, 190);
         }
