--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
             flex-direction: column;
             gap: 20px;
         }
+        header,
+        nav,
+        article,
+    footer {
+            padding: 20px;
+            border: 3px solid #b3609a;
+            border-radius: 5px;
+            margin: 10px;
+    }
+            
+            
     </style>
 
     <style>
