--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
         background-color: bisque;
         flex: 1;
     }
-    
+
+    main {
+        flex : 3
+        display:  flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    article {
+        background-color: #b3609a;
+    }
+
     </style>
 
     <style>
