--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -45,7 +45,7 @@
         }
 
         .article{
-            background-color: blue;
+            background-color: rgb(76, 76, 160);
             padding: 15px;
         }
 
