--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -16,9 +16,9 @@
         }
 
         .header{
-            border: rgb(145, 58, 58) 2px solid;
+            border: rgb(190, 122, 122) 2px solid;
             border-radius: 10px;
-            background-color: darkgoldenrod;
+            background-color: rgb(156, 60, 132);
             padding: 20px;
             text-align: center;
             margin-bottom: 10px;
@@ -31,7 +31,7 @@
         }
 
         .navigation {
-            background-color: brown;
+            background-color: rgb(85, 31, 90);
             padding: 15px;
             width: 200px;
         }
@@ -41,7 +41,7 @@
             flex-direction: column;/*Susun artikel secara vertikal*/
             gap: 10px;
             flex-grow: 1;/*Membuat area artikel mengisi ruang yang tersedia*/
-            background-color: crimson;
+            background-color: rgb(42, 1, 53);
         }
 
         .article{
@@ -50,7 +50,7 @@
         }
 
         .footer {
-            background-color: aqua;
+            background-color: rgb(215, 70, 228);
             padding: 15px;
             text-align: center;
         }
