--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -6,7 +6,7 @@
     <title>Struktur HTML & CSS Flex</title>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             margin: 20px;
         }
 
