--- a/flexbox.html
+++ b/flexbox.html
@@ -45,10 +45,10 @@
 </head>
 <body>
   <div class="container">
-    <div class="item">Kolom 1</div>
-    <div class="item">Kolom 2</div>
-    <div class="item">Kolom 3</div>
-    <div class="item">Kolom 4</div>
+    <div class="item">Hello 1</div>
+    <div class="item">Hello 2</div>
+    <div class="item">Hello 3</div>
+    <div class="item">Hello 4</div>
   </div>
 </body>
 </html>
